--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
                 <li>Дизайн <b>ZHURAVLEV</b></li>
             </ul>
         </div>
+        <div class="footer__yellow">
+            <img src="./images/yellow.png" alt="">
+        </div>
     </footer>
 </body>
 </html>
